feat: Implement Progressive Web App (PWA) functionality with a manifest, service worker, and related meta tags.

--- a/audio.htm
+++ b/audio.htm
@@ -4,7 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HOPE OS | AUDIO PODCASTS</title>
+    <title>HOPE OS | STREAM</title>
+
+    <!-- PWA -->
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#050505">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <link rel="apple-touch-icon" href="icon-512.png">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -2508,6 +2515,15 @@
 
             // Default View
             switchTab('podcasts');
+
+            // REGISTER PWA SERVICE WORKER
+            if ('serviceWorker' in navigator) {
+                window.addEventListener('load', () => {
+                    navigator.serviceWorker.register('./sw.js')
+                        .then(reg => console.log('SW Registered!', reg.scope))
+                        .catch(err => console.log('SW Failed:', err));
+                });
+            }
         }
 
         // --- NAVIGATION ---
